# rustyrag

./: .gitignore  Cargo.toml  README.md  run_with_project.sh
src/: contents.rs  main.rs  open_ai.rs  vector.rs
